[tool.poetry]
name = "deepvo-pytorch"
version = "0.1.0"
description = ""
authors = ["Gavin Strunk <gavin.strunk@ssci.com>"]
readme = "README.md"
packages = [{include = "deepvo_pytorch"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.0"
numpy = "^1.25.1"
matplotlib = "^3.7.2"
pillow = "^10.0.0"
pandas = "^2.0.3"
torchvision = "0.15.1"
opencv-python = "^4.8.0.74"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
